--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,11 @@
 
     <ListView
         android:id="@+id/lv_Notes"
-        android:layout_width="395dp"
-        android:layout_height="450dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="37dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_addNote"
+        android:layout_width="394dp"
+        android:layout_height="286dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,9 +21,10 @@
         android:id="@+id/btn_addNote"
         android:layout_width="338dp"
         android:layout_height="58dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="ADD NOTE"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv_Notes" />
 
@@ -33,6 +32,7 @@
         android:id="@+id/btn_refreshList"
         android:layout_width="340dp"
         android:layout_height="57dp"
+        android:layout_marginTop="24dp"
         android:text="REFRESH LIST"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
